<resources>
    <string name="app_name">Alarm</string>
    <string name="fragment_label_alarm_list">리마인드</string>
    <string name="fragment_label_remind_settings">리마인드 설정</string>
    <string name="fragment_label_alarm">알람</string>

    <string name="add_reminder">리마인더 추가</string>

    <string name="remind_name">리마인드 이름</string>
    <string name="remind_name_empty">이름없음</string>
    <string name="remind_name_tool_tip">Please enter a name</string>
    <string name="time_setting">시간 설정</string>
    <string name="ringtone">벨소리</string>
    <string name="ringtone_empty">벨소리 없음</string>
    <string name="save">save</string>
    <string name="dismiss">dismiss</string>
    <string name="ringtone_en">Ringtone</string>

    <string name="snack_bar_msg_select_ringtone">벨소리를 선택해주세요.</string>
    <string name="snack_bar_msg_input_remind_name">리마인드 이름을 작성해주세요.</string>
    <string name="snack_bar_msg_runtime_permission">원활한 알람표시를 위해 다른 앱 위에 그리기 권한을 허용해주세요.</string>

    <string name="dialog_message_overlay_permission">알람표시를 위한 다른 앱 위에 그리기 권한을 허용해주세요.</string>
    <string name="dialog_message_ok">확인</string>
    <string name="dialog_message_cancel">취소</string>

    <string name="alarm_deep_link_query">android-app://fragment_alarm?alarmId={alarmId}</string>
    <string name="alarm_deep_link">android-app://fragment_alarm?alarmId=</string>



</resources>