<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@+id/fragment_alarm_list">

    <fragment
        android:id="@+id/fragment_alarm_list"
        android:name="com.chan.alarm.feature.presentation.alarmlist.AlarmListFragment"
        android:label="@string/fragment_label_alarm_list"
        tools:layout="@layout/fragment_alarm_list">
        <action
            android:id="@+id/action_alarm_list_fragment_to_settings_fragment_graph"
            app:destination="@id/fragment_settings" />

    </fragment>

    <fragment
        android:id="@+id/fragment_settings"
        android:name="com.chan.alarm.feature.presentation.settings.SettingFragment"
        android:label="@string/fragment_label_remind_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_fragment_to_alarm_list_fragment_graph"
            app:destination="@id/fragment_alarm_list" />
    </fragment>

    <fragment
        android:id="@+id/fragment_alarm"
        android:name="com.chan.alarm.feature.presentation.alarm.AlarmFragment"
        android:label="@string/fragment_label_alarm"
        tools:layout="@layout/fragment_alarm">
        <action
            android:id="@+id/action_alarm_fragment_to_alarm_list_fragment_graph"
            app:destination="@id/fragment_alarm_list"
            app:popUpTo="@id/fragment_alarm_list"
            app:popUpToInclusive="true" />
        <argument
            android:name="alarmId"
            android:defaultValue="0"
            app:argType="integer" />
        <deepLink
            android:id="@+id/deeplink_alarm"
            app:uri="@string/alarm_deep_link_query" />
    </fragment>


</navigation>