<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="alarmViewModel"
            type="com.chan.alarm.common.presentation.viewmodel.AlarmViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/common_padding"
        android:paddingEnd="@dimen/common_padding">

        <include
            android:id="@+id/include_title"
            layout="@layout/common_title" />

        <TextView
            android:id="@+id/tv_remind_title_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/remind_name"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:ignore="NotSibling" />

        <EditText
            android:id="@+id/et_remind_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/remind_name_tool_tip"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/text_remind_hint_color"
            android:textSize="@dimen/common_text_size"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_remind_title_name" />

        <TextView
            android:id="@+id/tv_remind_time_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:gravity="start"
            android:text="@string/time_setting"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_remind_name"
            tools:ignore="NotSibling" />

        <TimePicker
            android:id="@+id/tp_remind_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:background="@drawable/rect_ringtone"
            android:theme="@style/MyTimePickerDark"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_remind_time_title" />


        <TextView
            android:id="@+id/tv_ringtone_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:gravity="start"
            android:text="@string/ringtone"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tp_remind_time"
            tools:ignore="NotSibling" />

        <View
            android:id="@+id/view_bg_ringtone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/common_margin"
            android:background="@drawable/rect_ringtone"
            app:layout_constraintDimensionRatio="1:0.25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ringtone_title" />

        <ImageView
            android:id="@+id/iv_ringtone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:background="@drawable/ic_music"
            app:layout_constraintBottom_toBottomOf="@id/view_bg_ringtone"
            app:layout_constraintStart_toStartOf="@id/view_bg_ringtone"
            app:layout_constraintTop_toTopOf="@id/view_bg_ringtone" />

        <TextView
            android:id="@+id/tv_ringtone_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:text="@string/ringtone_en"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_ringtone_sub_name"
            app:layout_constraintStart_toEndOf="@id/iv_ringtone_icon"
            app:layout_constraintTop_toTopOf="@id/view_bg_ringtone"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_ringtone_sub_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/view_bg_ringtone"
            app:layout_constraintStart_toEndOf="@id/iv_ringtone_icon"
            app:layout_constraintTop_toBottomOf="@id/tv_ringtone_name"
            tools:text="Homecoming" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:background="@drawable/chevron_right"
            app:layout_constraintBottom_toBottomOf="@id/view_bg_ringtone"
            app:layout_constraintEnd_toEndOf="@id/view_bg_ringtone"
            app:layout_constraintTop_toTopOf="@id/view_bg_ringtone" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/common_margin"
            android:text="@string/save"
            android:textStyle="bold"
            android:theme="@style/SaveButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>